add delete route
